--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,6 +196,7 @@
     <string name="doctor_image">Doctor Image</string>
     <string name="documents_uploaded_successfully">Documents Uploaded Successfully</string>
     <string name="doctor_connect">Doctor Connect</string>
+    <string name="patient_connect">Patient Connect</string>
     <string name="chats">Chats</string>
     <string name="connect">Connect</string>
     <string name="search">Search</string>
