--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,6 @@
     <string name="idle">Idle</string>
     <string name="doc_viewer_not_found">Document viewer not found.</string>
     <string name="timing"><![CDATA[< slide to cancel]]></string>
+    <string name="title_activity_location_picker">Location Picker</string>
 
 </resources>
