--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,11 @@
     <string name="age_range">Age Range</string>
     <string name="city">City</string>
     <string name="select_city">Select City</string>
+    <string name="welcome">Welcome,</string>
+    <string name="appointment_status">Appointment Status</string>
+    <string name="select_status">Select Status</string>
+    <string name="clinic_names">Clinic Names</string>
+    <string name="select_clinic">Select Clinic</string>
 
 
 </resources>
