--- a/app/src/main/res/values-sw600dp/strings.xml
+++ b/app/src/main/res/values-sw600dp/strings.xml
@@ -20,4 +20,6 @@
     <string name="send_sms">Send SMS</string>
     <string name="send_mail">Send Email</string>
     <string name="waiting_list">Waiting List</string>
+    <string name="please_select_patients">Please select patients</string>
+    <string name="my_patients">My Patients</string>
 </resources>
