solved bugs and added logout and chat ui

--- a/app/src/main/res/values-sw600dp/strings.xml
+++ b/app/src/main/res/values-sw600dp/strings.xml
@@ -7,7 +7,7 @@
     <string name="outstanding_amount">Outstanding Amount:</string>
     <string name="id">ID:</string>
     <string name="years">yrs -</string>
-    <string name="opd">OPD</string>
+    <string name="opd_appointment">Appointment</string>
     <string name="nil">NIL</string>
     <string name="booked">Booked</string>
     <string name="completed">completed</string>
@@ -22,4 +22,5 @@
     <string name="waiting_list">Waiting List</string>
     <string name="please_select_patients">Please select patients</string>
     <string name="my_patients">My Patients</string>
+    <string name="do_you_logout">Do you want to logout?</string>
 </resources>
