--- a/materialdrawer/src/main/res/values/strings.xml
+++ b/materialdrawer/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="md_content_description_drawer_close">Menu closed</string>
 
     <string name="md_label_plus">+%1$d</string>
+    <string name="md_content_description_drawer_open">Menu open</string>
 </resources>
