--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,18 +205,20 @@
     <string name="in_time">In Time</string>
     <string name="select_clinic_location">Select Clinic Location</string>
     <string name="all_patients_exists">All patients exists in waiting list!</string>
-    <string name="patients_added_to_waiting_list">Patients added to waiting list!</string>
+    <string name="patients_added_to_waiting_list">Patients added successfully!</string>
     <string name="patient_limit_exceeded">Patient limit exceeded!</string>
-    <string name="already_exists_in_waiting_list">already exists in waiting list!</string>
+    <string name="already_exists_in_waiting_list">All patients already exists in waiting list!</string>
     <string name="added_to_waiting_list">added to waiting list!</string>
     <string name="appointment_completed">Appointment is completed</string>
     <string name="appointment_cancelled">Appointment is cancelled</string>
     <string name="confirmed">confirmed</string>
+    <string name="Confirmed">Confirmed</string>
     <string name="cancelled">cancelled</string>
     <string name="no_show">no show</string>
     <string name="other">other</string>
     <string name="enter_sms_text_here">Enter sms text here</string>
     <string name="address">Address</string>
     <string name="location">Location</string>
+    <string name="complete_and_cancelled_status">Complete and cancel status patients cannot be added to waiting list</string>
 
 </resources>
