--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,6 +228,6 @@
     <string name="completed_opd">Completed Opd</string>
     <string name="consultation">Consultation</string>
     <string name="follow_up">Follow Up</string>
-
-
+    <string name="appointment_completed_button">Appointment\nCompleted</string>
+    <string name="appointment_cancelled_button">Appointment\nCancelled</string>
 </resources>
