--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,6 @@
     <string name="support">Support</string>
     <string name="outstanding_amount">O/S Amount:</string>
     <string name="id">ID:</string>
-    <string name="years">yrs -</string>
     <string name="opd_appointment">Appointment</string>
     <string name="nil">NIL</string>
     <string name="book">book</string>
@@ -198,7 +197,7 @@
     <string name="upload">Upload</string>
     <string name="select_report">Select Report</string>
     <string name="just_now">Just Now</string>
-    <string name="services">Services</string>
+    <string name="services"><u>Services</u></string>
     <string name="about_doctor"><u>About Doctor :</u></string>
     <string name="template_list">Template List</string>
     <string name="active">ACTIVE</string>
@@ -232,4 +231,5 @@
     <string name="new_patients">New Patients</string>
     <string name="appointment_completed_button">Appointment\nCompleted</string>
     <string name="appointment_cancelled_button">Appointment\nCancelled</string>
+    <string name="years">yrs -\u0020</string>
 </resources>
