--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,4 +237,5 @@
     <string name="do_you_want_to_restore_backup">Do you want to restore backup?</string>
     <string name="records_will_upload_when_internet_available">Records will upload when internet is available</string>
     <string name="uploading">Uploading</string>
+    <string name="camera">Camera</string>
 </resources>
