resolved some issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,6 +220,7 @@
     <string name="consultation">Consultation</string>
     <string name="follow_up">Follow Up</string>
     <string name="new_patients">Add New Patient</string>
+    <string name="today_new_patients">New Patients</string>
     <string name="appointment_completed_button">Appointment\nCompleted</string>
     <string name="appointment_cancelled_button">Appointment\nCancelled</string>
     <string name="years">yrs -\u0020</string>
