--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,12 @@
     <string name="records_will_upload_when_internet_available">Records will upload when internet is available</string>
     <string name="uploading">Uploading</string>
     <string name="camera">Camera</string>
+
+
+    <string name="first_name">First Name</string>
+    <string name="middle_name">Middle Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="reference_id">Reference ID.</string>
+
+
 </resources>
