--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,6 +266,7 @@
     <string name="you_cannot_add_waiting_list">You cannot add future appointments in waiting list</string>
     <string name="waiting_list_message">Oops !! There are no patients currently in the waiting list.</string>
     <string name="company_name">SCORG TECHNOLOGIES Pvt.Ltd.</string>
+    <string name="added_to_waiting_list_message">Completed and Cancelled status patients cannot be added to waiting list</string>
 
 
 </resources>
