--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="greater_than_sign"><![CDATA[>]]></string>
     <string name="age_range">Age Range</string>
     <string name="city">City</string>
+    <string name="state">State</string>
     <string name="select_city">Select City</string>
     <string name="welcome">Welcome,</string>
     <string name="appointment_status">Appointment Status</string>
@@ -279,10 +280,21 @@
     <string name="inconsultation">In-consultation</string>
     <string name="err_inconsultation_delete_msg">You can not delete in-consultation patient</string>
     <string name="err_inconsultation_already_msg">Patient is already in-consultation</string>
+    <string name="plz_select_option">Please select option</string>
+    <string name="plz_select_state">Please select state</string>
+    <string name="plz_select_city">Please select city</string>
+    <string name="err_msg_no_area_found_for_city">No area found for selected city, you can add new area</string>
+    <string name="reffered_by">Refer by</string>
 
     <string-array name="add_patient_options">
         <item>Save patient</item>
         <item>Save and add to waiting list</item>
         <item>Save and book appointment</item>
+    </string-array>
+
+    <string-array name="reffferd_by">
+        <item>Select reference</item>
+        <item>Patient</item>
+        <item>Doctor</item>
     </string-array>
 </resources>
