--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,8 +210,8 @@
     <string name="select_clinic_location">Select Clinic Location</string>
     <string name="patients_added_to_waiting_list">Patients added successfully!</string>
     <string name="patient_limit_exceeded">Patient limit exceeded!</string>
-    <string name="already_exists_in_waiting_list">All patients already exists in waiting list!</string>
-    <string name="added_to_waiting_list">added to waiting list!</string>
+    <string name="already_exists_in_waiting_list">All patients already exists in waiting mDataList!</string>
+    <string name="added_to_waiting_list">added to waiting mDataList!</string>
     <string name="appointment_completed">Appointment is completed</string>
     <string name="appointment_cancelled">Appointment is cancelled</string>
     <string name="confirmed">confirmed</string>
@@ -221,7 +221,7 @@
     <string name="other">Other</string>
     <string name="enter_sms_text_here">Enter sms text here</string>
     <string name="location">Location</string>
-    <string name="complete_and_cancelled_status">Complete and cancel status patients cannot be added to waiting list</string>
+    <string name="complete_and_cancelled_status">Complete and cancel status patients cannot be added to waiting mDataList</string>
     <string name="today_new_patient">"Today's\nNew Patients"</string>
     <string name="today_appointment">"Today's\nAppointments"</string>
     <string name="today_waiting_list"> "Today's\nWaiting List"</string>
@@ -270,10 +270,10 @@
     <string name="later">Later</string>
     <string name="patient_registration">Patient Registration</string>
     <string name="cannot_completed_appointment">You cannot complete appointment for future dates.</string>
-    <string name="you_cannot_add_waiting_list">You cannot add future appointments in waiting list</string>
-    <string name="waiting_list_message">Oops !! There are no patients currently in the waiting list.</string>
+    <string name="you_cannot_add_waiting_list">You cannot add future appointments in waiting mDataList</string>
+    <string name="waiting_list_message">Oops !! There are no patients currently in the waiting mDataList.</string>
     <string name="company_name">SCORG TECHNOLOGIES Pvt.Ltd.</string>
-    <string name="added_to_waiting_list_message">Completed and Cancelled status patients cannot be added to waiting list</string>
+    <string name="added_to_waiting_list_message">Completed and Cancelled status patients cannot be added to waiting mDataList</string>
 
 
     <string name="delete">Delete</string>
@@ -285,10 +285,11 @@
     <string name="plz_select_city">Please select city</string>
     <string name="err_msg_no_area_found_for_city">No area found for selected city, you can add new area</string>
     <string name="reffered_by">Refer by:</string>
+    <string name="err_msg_select_reffered_by">Select refer by</string>
 
     <string-array name="add_patient_options">
         <item>Save patient</item>
-        <item>Save and add to waiting list</item>
+        <item>Save and add to waiting mDataList</item>
         <item>Save and book appointment</item>
     </string-array>
 
@@ -296,5 +297,12 @@
         <item>Select reference</item>
         <item>Doctor</item>
         <item>Patient</item>
+    </string-array>
+
+    <string-array name="salutation_entries">
+        <item>Mr.</item>
+        <item>Mrs.</item>
+        <item>Miss</item>
+        <item>Other</item>
     </string-array>
 </resources>
