--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -284,12 +284,12 @@
     <string name="plz_select_state">Please select state</string>
     <string name="plz_select_city">Please select city</string>
     <string name="err_msg_no_area_found_for_city">No area found for selected city, you can add new area</string>
-    <string name="reffered_by">Refer by:</string>
-    <string name="err_msg_select_reffered_by">Select refer by</string>
+    <string name="reffered_by">Referred by:</string>
+    <string name="err_msg_select_reffered_by">Select referred by</string>
 
     <string-array name="add_patient_options">
         <item>Save patient</item>
-        <item>Save and add to waiting mDataList</item>
+        <item>Save and add to waiting list</item>
         <item>Save and book appointment</item>
     </string-array>
 
