--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -284,6 +284,7 @@
     <string name="plz_select_state">Please select state</string>
     <string name="plz_select_city">Please select city</string>
     <string name="err_msg_no_area_found_for_city">No area found for selected city, you can add new area</string>
+    <string name="err_msg_no_area_entered">Please enter area</string>
     <string name="reffered_by">Referred by:</string>
     <string name="err_msg_select_reffered_by">Select referred by</string>
 
