--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -288,6 +288,9 @@
     <string name="reffered_by">Referred by:</string>
     <string name="err_msg_select_reffered_by">Select referred by</string>
 
+    <string name="tap_to_add_new_area">Tap to add new area</string>
+    <string name="tap_to_add_new_doctor">Tap to add new doctor</string>
+
     <string-array name="add_patient_options">
         <item>Save patient</item>
         <item>Save and add to waiting list</item>
