changed setting ui and fixed crash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,10 +191,10 @@
     <string name="select_date_text">Select Date</string>
     <string name="enter_date">Enter Date</string>
     <string name="enter_address">Enter Address</string>
-    <string name="address_details">Address details</string>
+    <string name="address_details">Address Details</string>
     <string name="address_line">Address line</string>
     <string name="area">Area</string>
-    <string name="referenced_details">Reference details</string>
+    <string name="referenced_details">Reference Details</string>
     <string name="next">Next</string>
     <string name="addrecords">Add Records</string>
     <string name="upload">Upload</string>
@@ -249,6 +249,7 @@
     <string name="add_patient_offline_msg">No internet connection found, still you can add patient offline.</string>
     <string name="add_patient_offline_and_book_apt">To use this option, you must have valid internet connection</string>
     <string name="setting_add_patient_header">Add Patient Offline</string>
+    <string name="setting_add_patient_form">Add Patient form</string>
 
     <string name="book_appointment">Book Appointment</string>
     <string name="appointment_booked_message">Appointment has already been taken with this doctor.</string>
