--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,7 @@
     <string name="referenced_details">Reference Details</string>
     <string name="next">Next</string>
     <string name="addrecords">Add Records</string>
+    <string name="view_more">VIEW MORE</string>
     <string name="upload">Upload</string>
     <string name="select_report">Select Report</string>
     <string name="just_now">Just Now</string>
