handled vital contions for any data getting from server like category and ranges array just like as patient app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,6 +182,7 @@
     <string name="normal">Normal Level :</string>
     <string name="moderate">Moderate Level :</string>
     <string name="severe">Severe Level :</string>
+    <string name="noncategory">Other Level :</string>
     <string name="please_select_patients">Please select patients</string>
     <string name="my_patients">My Patients</string>
     <string name="do_you_logout">Do you want to logout?</string>
