--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="err_maximum_otp_retries">You have exceeded maximum retry of OTP generation, please try after sometime.</string>
     <string name="err_invalid_mobile_no">Enter valid mobile no.</string>
     <string name="enter_password">Password</string>
-    <string name="error_too_small_password">Password should be 6 characters long. </string>
+    <string name="error_too_small_password">Password should be 6 characters long.</string>
     <string name="title">Title</string>
     <string name="server_error">Server Error</string>
     <string name="add_caption">Add Caption</string>
@@ -293,6 +293,7 @@
 
     <string name="tap_to_add_new_area">Tap to add new area</string>
     <string name="tap_to_add_new_doctor">Tap to add new doctor</string>
+    <string name="change_password">Change Password</string>
 
     <string-array name="add_patient_options">
         <item>Save patient</item>
