--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dr Rescribe</string>
-    <string name="enter_mobile_no">Mobile No.</string>
+    <string name="enter_mobile_no">Mobile No. *</string>
     <string name="log_in">Login</string>
     <string name="enter_full_name">Name</string>
     <string name="enter_email_id">Email ID</string>
@@ -243,9 +243,9 @@
     <string name="camera">Camera</string>
 
 
-    <string name="first_name">First Name</string>
+    <string name="first_name">First Name *</string>
     <string name="middle_name">Middle Name</string>
-    <string name="last_name">Last Name</string>
+    <string name="last_name">Last Name *</string>
     <string name="reference_id">Reference ID.</string>
     <string name="reference_id_input_err_msg">Reference ID should be alphanumeric, no special characters and no white spaces.</string>
     <string name="add_patient_offline_msg">No internet connection found, still you can add patient offline.</string>
