--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="log_in">Login</string>
     <string name="enter_full_name">Name</string>
     <string name="enter_email_id">Email ID</string>
+    <string name="enter_details">Description</string>
     <string name="internet">Please check your Internet Connection</string>
     <string name="timeout">Timeout error</string>
     <string name="break_fast">BREAKFAST</string>
@@ -293,10 +294,12 @@
     <string name="err_msg_no_area_found_for_city">No area found for selected city, you can add new area</string>
     <string name="err_msg_no_area_entered">Please enter area</string>
     <string name="reffered_by">Referred by:</string>
+    <string name="relation">Relation</string>
     <string name="err_msg_select_reffered_by">Select referred by</string>
 
     <string name="tap_to_add_new_area">Tap to add new area</string>
     <string name="tap_to_add_new_doctor">Tap to add new doctor</string>
+    <string name="tap_to_add_new_patient">Tap to add new patient</string>
     <string name="change_password">Change Password</string>
 
     <string-array name="add_patient_options">
@@ -309,6 +312,7 @@
         <item>Select reference</item>
         <item>Doctor</item>
         <item>Patient</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="salutation_entries">
@@ -317,4 +321,30 @@
         <item>Miss</item>
         <item>Other</item>
     </string-array>
+
+
+    <string-array name="mr_relation_entries">
+        <item>Self</item>
+        <item>Son</item>
+        <item>Father</item>
+        <item>Husband</item>
+    </string-array>
+
+    <string-array name="mrs_relation_entries">
+        <item>Self</item>
+        <item>Daughter</item>
+        <item>Mother</item>
+        <item>Wife</item>
+    </string-array>
+
+    <string-array name="other_relation_entries">
+        <item>Self</item>
+        <item>Son</item>
+        <item>Father</item>
+        <item>Husband</item>
+        <item>Daughter</item>
+        <item>Mother</item>
+        <item>Wife</item>
+    </string-array>
+
 </resources>
