added upload note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -366,7 +366,8 @@
     <string name="service_ble_start">Service BLE Start...</string>
     <string name="service_usb_start">service USB Start...</string>
     <string name="scan_activity">Scan Smart Pen</string>
-    <string name="draw_activity">Medication</string>
+    <string name="draw_activity">Write Note</string>
     <string name="action_save">Save</string>
+    <string name="add_note">Add Notes</string>
 
 </resources>
